components/00-mixins/element-styles/_accolade.scss
///
/// Convert an element to a box with outside accolade.
///
/// @since 6.0.0
/// @group tools
/// @access public
/// @author Lennart Van Vaerenbergh
///
/// @param {string} $v-position - The vertical position of the accolade.
/// @param {string} $h-position - The horizontal position of the accolade.
/// @param {string} $width - The accolade width.
/// @param {string} $height - The accolade height.
/// @param {string} $color - Text theme color.
/// @param {string} $background-color - The background theme color.
///
@mixin accolade($v-position: "top", $h-position: "right", $width: 50px, $height: 18px, $color: "color-zero", $background-color: "color-secondary") {
  @include theme('color', $color, 'caption-color');
  @include theme('background-color', $background-color, 'caption-background-color');

  display: inline-block;
  position: relative;
  width: fit-content;
  padding: 2px 10px;
  z-index: 1;

  @if $v-position == bottom {
    margin-bottom: $height;
  }

  &::before {
    @include theme-content($background-color, 'caption-background-color') {
      background: transparent svg-as-background('accolade', $theme-color, $width, $height);
      background-repeat: no-repeat;
      background-position: right;
      background-size: 100%;
    }

    position: absolute;
    #{$v-position}: -$height;
    #{$h-position}: 0;
    width: $width;
    height: $height;
    content: '';
    @if $v-position == top {
      transform: rotate(180deg);
    }
  }
}

